<resources>
    <string name="app_name">Хочу помочь</string>
    <string name="title_activity_help_categories">HelpCategoriesActivity</string>

    <!--
            Сплэш
        -->
    <string name="msg_loading">Загрузка…</string>
    <string name="msg_load_error">Фатальная ошибка загрузки: отсутствуют файлы категорий и событий либо отсутствует доступ к файлам. Исправьте ошибку и затем перезапустите приложение.</string>

    <!--
        Общее
    -->
    <string name="button_news">Новости</string>
    <string name="button_search">Поиск</string>
    <string name="button_help">Помочь</string>
    <string name="button_history">История</string>
    <string name="button_profile">Профиль</string>
    <string name="title_error">Ошибка!</string>
    <string name="unexpected_error">Непредвиденная ошибка!</string>
    <string name="no_internet_connection">Отсутствует соединение с Интернетом</string>
    <string name="button_close">Закрыть</string>

    <!--
        Экран помощи
    -->
    <string name="title_help">Помощь</string>
    <string name="help_select_hint">Выберите категорию помощи</string>
    <string name="help_error">Ошибка: загрузка категорий не удалась. Проверьте ваше Интернет соединение и повторите.</string>

    <!--
        Экран профиля
    -->
    <string name="title_profile">Профиль</string>
    <string name="profile_birth_date">Дата рождения</string>
    <string name="profile_business">Сфера деятельности</string>
    <string name="profile_receive_notifications">Получать push-уведомления</string>
    <string name="profile_friends">Ваши друзья</string>
    <string name="profile_log_out">Выйти из аккаунта</string>
    <string name="profile_edit">Изменить профиль</string>
    <string name="edit_photo_select">Выбрать фото</string>
    <string name="edit_photo_make">Сделать снимок</string>
    <string name="edit_photo_delete">Удалить</string>
    <string name="profile_friends_error">Возникла ошибка при загрузке списка друзей</string>
    <string name="profile_no_friends">Список друзей пуст</string>


    <!--
        Экран поиска
    -->
    <string name="title_search">Поиск</string>
    <string name="search_placeholder">Введите название организации</string>
    <string name="search_tab_events">По мероприятиям</string>
    <string name="search_tab_organisations">По НКО</string>
    <plurals name="organisation_search_quantity">
        <item quantity="zero">%d мероприятий</item>
        <item quantity="one">%d мероприятие</item>
        <item quantity="few">%d мероприятия</item>
        <item quantity="many">%d мероприятий</item>
        <item quantity="other">%d мероприятий</item>
    </plurals>
    <string name="search_hint_1">Напишите в строке поиска название мероприятия или ключевые слова.</string>
    <string name="search_result_info">Результаты поиска: %1$s</string>
    <string name="event_date_expiration_info">Осталось %1$s (%2$s - %3$s)</string>
    <plurals name="event_date_expiration">
        <item quantity="zero">%d дней</item>
        <item quantity="one">%d день</item>
        <item quantity="few">%d дня</item>
        <item quantity="many">%d дней</item>
        <item quantity="other">%d дней</item>
    </plurals>

    <!--Экран категорий-->
    <string name="title_activity_help_category">HelpCategoryActivity</string>
    <string name="category_filter">Фильтр</string>
    <string name="title_activity_event">EventActivity</string>

    <!--Экран события-->
    <string name="charity_screen_error_message">Ошибка: загрузка события не удалась. Проверьте ваше Интернет соединение и повторите.</string>
    <string name="charity_screen_action_bar_items">Помочь \nвещами</string>
    <string name="charity_screen_action_bar_volunteers">Стать \nволонтёром</string>
    <string name="charity_screen_action_bar_quality_help">Проф. \nпомощь</string>
    <string name="charity_screen_action_bar_donate">Помочь \nденьгами</string>
    <string name="charity_screen_organisation_message">У вас есть вопросы? Напишите нам!</string>
    <string name="charity_screen_organisation_site">Перейти на сайт организаии</string>
    
    <!--Экран логина-->
    <string name="login_action_error_responce">Чтобы попасть в эту вкладку вы должны произвести вход!</string>
    <string name="login_screen_title">Авторизация</string>
    <string name="login_screen_disclaimer_message_top">Для участия в мероприятиях войдите в наше приложение через социальные сети</string>
    <string name="login_screen_disclaimer_message_bottom">Или авторизуйтесь через приложение</string>
    <string name="login_screen_email">E-mail</string>
    <string name="login_screen_email_prompt">Введите e-mail</string>
    <string name="login_screen_password">Пароль</string>
    <string name="login_screen_password_prompt">Введите пароль</string>
    <string name="login_screen_login_button">Войти</string>
    <string name="login_screen_forgot_credential"><u>Забыли пароль?</u></string>
    <string name="login_screen_register"><u>Регистрация</u></string>

</resources>
