<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/edit_photo_dialog_width"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_photo_select"
        style="@style/EditPhotoItem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_photo_item_height"
        android:layout_weight="1"
        android:drawableStart="@drawable/ic_camera"
        android:text="@string/edit_photo_select" />

    <TextView
        android:id="@+id/text_photo_make"
        style="@style/EditPhotoItem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_photo_item_height"
        android:layout_weight="1"
        android:drawableStart="@drawable/ic_upload"
        android:text="@string/edit_photo_make" />

    <TextView
        android:id="@+id/text_photo_delete"
        style="@style/EditPhotoItem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_photo_item_height"
        android:layout_weight="1"
        android:drawableStart="@drawable/ic_delete"
        android:text="@string/edit_photo_delete" />
</LinearLayout>